--- a/index.html
+++ b/index.html
@@ -3,121 +3,122 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>12 Bubbles Mobile</title>
+<title>12 Bubbles</title>
 <style>
 html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
   font-family: monospace;
   background-color:#0a0a0a;
   color:#fff;
-  touch-action: manipulation;
 }
 
 /* --- LOADING SCREEN --- */
 #loadingScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
   background:#000; display:flex; justify-content:center; align-items:center;
-  color:#fff; font-size:36px; font-weight:bold; z-index:3000;
+  color:#fff; font-size:50px; font-weight:bold; z-index:3000;
   text-align:center;
   animation:eyeGlow 2s ease-in-out forwards;
 }
+
 @keyframes eyeGlow {
   0% { opacity:0.2; text-shadow:none; }
   50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; }
   100% { opacity:0.2; text-shadow:none; }
 }
 
-/* --- HOME SCREEN BUTTONS --- */
-#startBtn, #indexBtn, #updatesBtn {
-  display:none; margin:10px auto; width:80%;
-  font-size:24px; padding:15px;
+/* --- HOME SCREEN --- */
+#startBtn, #indexBtn {
+  display:none; margin:0 auto;
+  font-size:28px; padding:15px 35px;
+  background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
   border:none; border-radius:12px; color:#fff;
   font-weight:bold; text-transform:uppercase;
-  cursor:pointer; z-index:1000;
+  cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
+  z-index:1000;
 }
-#startBtn { background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
-#indexBtn { background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
-#updatesBtn { background: linear-gradient(45deg,#0f0,#0a0); box-shadow:0 0 10px #0a0,0 0 20px #0f0; }
+#startBtn { margin-top:30vh; }
+#indexBtn { margin-top:20px; }
 
 /* --- Countdown & Score --- */
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%);
-  font-size:60px; color:#d166ff;
-  text-shadow:0 0 15px #d166ff,0 0 30px #a044ff;
+  font-size:80px; color:#d166ff;
+  text-shadow:0 0 20px #d166ff,0 0 40px #a044ff;
   z-index:1001; display:none;
 }
 #scoreContainer {
-  position:fixed; top:10px; left:50%;
+  position:fixed; top:20px; left:50%;
   transform:translateX(-50%);
   z-index:1001; text-align:center; display:none;
 }
-#highscore { font-size:18px; color:#ff0; margin-bottom:5px; }
-#score { font-size:24px; color:#d166ff; }
-#lives { font-size:18px; color:#f00; margin-top:5px; }
+#highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
+#score { font-size:28px; color:#d166ff; }
+#lives { font-size:20px; color:#f00; margin-top:5px; }
 
 /* --- Bubbles --- */
 .bubble {
-  width:70px; height:70px; border-radius:50%;
+  width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
-  font-size:20px; font-weight:bold; color:#fff;
+  font-size:24px; font-weight:bold; color:#fff;
   background:linear-gradient(135deg,#a044ff,#6a00f4);
-  border:2px solid #d166ff; box-shadow:0 0 8px #d166ff,0 0 15px #a044ff inset;
+  border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset;
   position:absolute; cursor:pointer;
 }
-.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:22px; }
-.bubble.invert { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:22px; }
-.bubble.instawin { background: linear-gradient(135deg,#ff0,#0f0); color:#000; font-size:22px; font-weight:bold; }
-.bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:20px; }
-.bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:22px; }
+.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:28px; }
+.bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:28px; }
+.bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:24px; }
+.bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; }
 
-/* --- Index & Updates Panel --- */
-.panel {
+/* --- Index Panel --- */
+#indexPanel {
   position:fixed; top:100%; left:0; width:100%;
   max-height:70%; background:rgba(10,10,10,0.95);
-  overflow-y:auto; transition:top 0.5s ease; padding:15px;
-  z-index:999; border-top-left-radius:15px; border-top-right-radius:15px;
+  overflow-y:auto; transition:top 0.5s ease; padding:20px;
+  z-index:999; box-shadow:0 -5px 30px #d166ff;
 }
-.panel h2 { text-transform:uppercase; margin-bottom:10px; }
-.panel .closeBtn {
-  position:absolute; top:10px; right:10px; font-size:24px; cursor:pointer;
-  color:#fff; font-weight:bold;
+#indexPanel h2 { text-transform:uppercase; }
+#indexPanel .closeBtn {
+  position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer;
+  color:#fff; font-weight:bold; z-index:1001;
 }
-.panel .indexItem { display:flex; align-items:center; margin:8px 0; }
-.panel .bubbleImg {
-  width:50px; height:50px; margin-right:10px; border-radius:50%;
+.indexItem { display:flex; align-items:center; margin:10px 0; }
+.indexItem .bubbleImg {
+  width:60px; height:60px; margin-right:15px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
   font-weight:bold; color:#fff; border:2px solid #d166ff;
-  box-shadow:0 0 10px #d166ff inset; animation:float 1s infinite alternate;
+  box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate;
 }
-.panel .desc { flex:1; font-size:14px; }
-.panel .rarity { font-weight:bold; font-size:14px; }
-@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-8px);} }
+.indexItem .desc { flex:1; }
+.indexItem .rarity { font-weight:bold; }
+
+@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
 /* --- End Screen --- */
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
-  background:rgba(0,0,0,0.95); display:none; flex-direction:column;
-  justify-content:center; align-items:center; color:#fff; font-size:30px;
+  background:rgba(0,0,0,0.9); display:none; flex-direction:column;
+  justify-content:center; align-items:center; color:#fff; font-size:40px;
   z-index:1500; text-align:center;
 }
 #continueBtn {
-  margin-top:20px; font-size:20px; padding:12px 30px;
+  margin-top:30px; font-size:26px; padding:15px 40px;
   border:none; border-radius:10px; cursor:pointer; color:#fff;
   background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
-  box-shadow:0 0 8px #d166ff,0 0 15px #a044ff;
+  box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
 }
 
 /* --- Version --- */
 #versionLabel {
-  position:fixed; top:5px; right:5px; font-size:14px;
+  position:fixed; top:10px; right:10px; font-size:16px;
   color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none;
 }
 
 /* --- Easter Egg --- */
 #easterEgg {
   position: fixed; top: 0; left:0; width:100%; height:100%;
-  background:rgba(0,0,0,0.9); color:red; font-size:120px;
+  background:rgba(0,0,0,0.9); color:red; font-size:150px;
   font-weight:bold; display:flex; justify-content:center; align-items:center;
   z-index:2000; display:none; text-transform:uppercase; opacity:0;
   animation:fadeShake 5s forwards;
@@ -141,30 +142,18 @@ html, body {
 
 <div id="loadingScreen">Level 12 studio</div>
 
-<div id="versionLabel">Released 1.2.0</div>
+<div id="versionLabel">Released 1.1.0</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
-<button id="updatesBtn">UPDATY</button>
 
-<!-- Index Panel -->
-<div id="indexPanel" class="panel">
+<div id="indexPanel">
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
   <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Běžná:</span> +1 skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">invert</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0,#0f0); color:#000;">*12*</div><div class="desc"><span class="rarity">Extrémně vzácná 0,05%:</span> +999999999 skóre</div></div>
-</div>
-
-<!-- Updates Panel -->
-<div id="updatesPanel" class="panel">
-  <div class="closeBtn">✖</div>
-  <h2>UPDATY</h2>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">invert</div><div class="desc"><span class="rarity">Nová:</span> +144 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0,#0f0); color:#000;">*12*</div><div class="desc"><span class="rarity">Nová:</span> +999999999 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#fff;">Updaty</div><div class="desc">Nové tlačítko "Updaty" bylo přidáno do menu</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -186,9 +175,7 @@ html, body {
 <script>
 const startBtn=document.getElementById('startBtn');
 const indexBtn=document.getElementById('indexBtn');
-const updatesBtn=document.getElementById('updatesBtn');
 const indexPanel=document.getElementById('indexPanel');
-const updatesPanel=document.getElementById('updatesPanel');
 const countdownEl=document.getElementById('countdown');
 const scoreContainer=document.getElementById('scoreContainer');
 const scoreEl=document.getElementById('score');
@@ -200,7 +187,7 @@ const finalScoreText=document.getElementById('finalScoreText');
 const continueBtn=document.getElementById('continueBtn');
 const versionLabel=document.getElementById('versionLabel');
 const easterEl=document.getElementById('easterEgg');
-const closeBtns=document.querySelectorAll('.closeBtn');
+const closeBtn=document.querySelector('#indexPanel .closeBtn');
 const loadingScreen=document.getElementById('loadingScreen');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
@@ -211,46 +198,45 @@ window.addEventListener('load',()=>{
     loadingScreen.style.display='none';
     startBtn.style.display='block';
     indexBtn.style.display='block';
-    updatesBtn.style.display='block';
     attachButtonEvents();
-  },2000);
+  },2000); // delší efekty zasvícení
 });
 
 // --- BUTTON LOGIC ---
 function attachButtonEvents(){
   startBtn.addEventListener('click',startCountdown);
-  
-  indexBtn.addEventListener('click',()=>togglePanel(indexPanel));
-  updatesBtn.addEventListener('click',()=>togglePanel(updatesPanel));
-  
-  closeBtns.forEach(btn=>btn.addEventListener('click',()=>{
-    btn.parentElement.style.top='100%';
+  indexBtn.addEventListener('click',(e)=>{
+    e.stopPropagation();
+    if(indexPanel.style.top==='30%'){
+      indexPanel.style.top='100%';
+      startBtn.style.display='block';
+      indexBtn.style.display='block';
+    } else {
+      indexPanel.style.top='30%';
+      startBtn.style.display='none';
+      indexBtn.style.display='none';
+    }
+  });
+  closeBtn.addEventListener('click',(e)=>{
+    e.stopPropagation();
+    indexPanel.style.top='100%';
     startBtn.style.display='block';
     indexBtn.style.display='block';
-    updatesBtn.style.display='block';
-  }));
-  
+  });
+  indexPanel.addEventListener('click',e=>e.stopPropagation());
+  document.body.addEventListener('click',()=>{
+    if(indexPanel.style.top==='30%'){
+      indexPanel.style.top='100%';
+      startBtn.style.display='block';
+      indexBtn.style.display='block';
+    }
+  });
   continueBtn.addEventListener('click',()=>{
     endScreen.style.display='none';
     startBtn.style.display='block';
     indexBtn.style.display='block';
-    updatesBtn.style.display='block';
     versionLabel.style.display='block';
   });
-}
-
-function togglePanel(panel){
-  if(panel.style.top==='30%'){
-    panel.style.top='100%';
-    startBtn.style.display='block';
-    indexBtn.style.display='block';
-    updatesBtn.style.display='block';
-  } else {
-    panel.style.top='30%';
-    startBtn.style.display='none';
-    indexBtn.style.display='none';
-    updatesBtn.style.display='none';
-  }
 }
 
 // --- Countdown ---
@@ -258,7 +244,6 @@ function startCountdown(){
   versionLabel.style.display='none';
   startBtn.style.display='none';
   indexBtn.style.display='none';
-  updatesBtn.style.display='none';
   countdownEl.style.display='block';
   let count=3;
   countdownEl.textContent=count;
@@ -291,16 +276,15 @@ function spawnBubble(){
   bubble.classList.add('bubble');
 
   if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
-  else if(chance<=0.0125){ bubble.classList.add('invert'); bubble.textContent="invert"; bubble.dataset.type="invert"; }
-  else if(chance<=0.015){ bubble.classList.add('instawin'); bubble.textContent="*12*"; bubble.dataset.type="instawin"; }
+  else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
   else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
   else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
   else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
 
-  const size=Math.random()*50+70;
+  const size=Math.random()*60+60;
   bubble.style.width=size+'px';
   bubble.style.height=size+'px';
-  bubble.style.fontSize=(bubble.dataset.type==="invert"||bubble.dataset.type==="instawin"?size/3.5:size/3)+'px';
+  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
   bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
@@ -308,12 +292,11 @@ function spawnBubble(){
 
   const pop=()=>{
     if(!gameRunning) return;
-    if(['2x','invert','instawin','triple','gravity'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
+    if(['2x','144','triple','gravity'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
     bubble.remove();
     bubbles=bubbles.filter(b=>b!==bubble);
     if(bubble.dataset.type==="2x") score*=2;
-    else if(bubble.dataset.type==="invert") score+=144;
-    else if(bubble.dataset.type==="instawin") score=999999999;
+    else if(bubble.dataset.type==="144") score+=144;
     else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
     else if(bubble.dataset.type==="gravity"){
       const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
@@ -341,7 +324,7 @@ function spawnSingleBubble(){
   const speedMultiplier=1+elapsed/120;
   const bubble=document.createElement('div'); bubble.classList.add('bubble');
   bubble.textContent="12"; bubble.dataset.type="normal";
-  const size=Math.random()*50+70;
+  const size=Math.random()*60+60;
   bubble.style.width=size+'px'; bubble.style.height=size+'px';
   bubble.style.fontSize=size/3+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
