--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@ html, body {
   text-align:center;
   animation:eyeGlow 2s ease-in-out forwards;
 }
-
 @keyframes eyeGlow {
   0% { opacity:0.2; text-shadow:none; }
   50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; }
@@ -70,6 +69,8 @@ html, body {
 .bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:28px; }
 .bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:24px; }
 .bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; }
+.bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; filter: invert(1); font-size:26px; }
+.bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0, 0 0 60px #f00; }
 
 /* --- Index Panel --- */
 #indexPanel {
@@ -154,6 +155,8 @@ html, body {
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#000); filter:invert(1); color:#0ff;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Obrátí barvy obrazovky a dá +10 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; box-shadow:0 0 30px #ff0,0 0 60px #f00;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,1%:</span> Okamžité vítězství (+999 999 999 skóre)</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -199,7 +202,7 @@ window.addEventListener('load',()=>{
     startBtn.style.display='block';
     indexBtn.style.display='block';
     attachButtonEvents();
-  },2000); // delší efekty zasvícení
+  },2000);
 });
 
 // --- BUTTON LOGIC ---
@@ -275,11 +278,41 @@ function spawnBubble(){
   const bubble=document.createElement('div');
   bubble.classList.add('bubble');
 
-  if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
-  else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
-  else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
-  else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
-  else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
+  // --- NOVÉ ŠANCE ---
+  if(chance<=0.001){ // 0.1 %
+    bubble.classList.add('instawin');
+    bubble.textContent="?12?";
+    bubble.dataset.type="instawin";
+  }
+  else if(chance<=0.016){ // 1.5 %
+    bubble.classList.add('invert');
+    bubble.textContent="!12!";
+    bubble.dataset.type="invert";
+  }
+  else if(chance<=0.0185){ // 0.25 %
+    bubble.classList.add('rare2x');
+    bubble.textContent="12×2";
+    bubble.dataset.type="2x";
+  }
+  else if(chance<=0.0285){ // 1 %
+    bubble.classList.add('rare144');
+    bubble.textContent="12²";
+    bubble.dataset.type="144";
+  }
+  else if(chance<=0.0485){ // 2 %
+    bubble.classList.add('triple');
+    bubble.textContent="3×12";
+    bubble.dataset.type="triple";
+  }
+  else if(chance<=0.0785){ // 3 %
+    bubble.classList.add('gravity');
+    bubble.textContent="<12>";
+    bubble.dataset.type="gravity";
+  }
+  else {
+    bubble.textContent="12";
+    bubble.dataset.type="normal";
+  }
 
   const size=Math.random()*60+60;
   bubble.style.width=size+'px';
@@ -292,9 +325,10 @@ function spawnBubble(){
 
   const pop=()=>{
     if(!gameRunning) return;
-    if(['2x','144','triple','gravity'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
+    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
     bubble.remove();
     bubbles=bubbles.filter(b=>b!==bubble);
+
     if(bubble.dataset.type==="2x") score*=2;
     else if(bubble.dataset.type==="144") score+=144;
     else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
@@ -306,7 +340,16 @@ function spawnBubble(){
         b.style.top=(by-parseFloat(b.style.height)/2)+'px';
       });
     }
+    else if(bubble.dataset.type==="invert"){
+      document.body.style.filter='invert(1)';
+      setTimeout(()=>document.body.style.filter='',1500);
+      score+=10;
+    }
+    else if(bubble.dataset.type==="instawin"){
+      score+=999999999;
+    }
     else score++;
+
     if(score>999999999) score=999999999;
     scoreEl.textContent="Skóre: "+score;
     if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
@@ -332,10 +375,10 @@ function spawnSingleBubble(){
   bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
   document.body.appendChild(bubble);
 
-  const pop=()=>{ 
-    if(!gameRunning) return; score++; 
-    if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score; 
-    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; } 
+  const pop=()=>{  
+    if(!gameRunning) return; score++;  
+    if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score;  
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }  
     bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
   };
   bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
@@ -347,9 +390,9 @@ function updateBubbles(){
   bubbles.forEach(bubble=>{
     const top=parseFloat(bubble.style.top);
     bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
-    if(top<=0){ 
-      lives--; livesEl.textContent="Životy: "+lives; 
-      bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); 
+    if(top<=0){  
+      lives--; livesEl.textContent="Životy: "+lives;  
+      bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);  
       if(lives<=0) endGame();
     }
   });
