--- a/index.html
+++ b/index.html
@@ -3,37 +3,40 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>12 Bubbles</title>
+<title>12 Bubbles - HALLOWEEN</title>
 <style>
 html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
   font-family: monospace;
   background-color:#0a0a0a;
-  color:#fff;
+  background-image: radial-gradient(circle at 30% 30%, #ff66001a 10%, transparent 60%),
+                    radial-gradient(circle at 70% 70%, #ff99001a 10%, transparent 60%),
+                    linear-gradient(180deg, #000 0%, #111 100%);
+  color:#ff6600;
 }
 
 /* --- LOADING SCREEN --- */
 #loadingScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
   background:#000; display:flex; justify-content:center; align-items:center;
-  color:#fff; font-size:50px; font-weight:bold; z-index:3000;
+  color:#ff6600; font-size:12vw; font-weight:bold; z-index:3000;
   text-align:center;
-  animation:eyeGlow 2s ease-in-out forwards;
+  animation:glowPulse 3.5s forwards;
 }
-@keyframes eyeGlow {
-  0% { opacity:0.2; text-shadow:none; }
-  50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; }
-  100% { opacity:0.2; text-shadow:none; }
+@keyframes glowPulse {
+  0% { text-shadow:0 0 5px #ff3300, 0 0 10px #ff6600; opacity:0.2; }
+  50% { text-shadow:0 0 20px #ff6600, 0 0 40px #ff9900, 0 0 60px #ffcc00; opacity:1; }
+  100% { text-shadow:0 0 5px #ff3300, 0 0 10px #ff6600; opacity:0.2; }
 }
 
 /* --- HOME SCREEN --- */
 #startBtn, #indexBtn {
   display:none; margin:0 auto;
   font-size:28px; padding:15px 35px;
-  background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
-  border:none; border-radius:12px; color:#fff;
+  background: linear-gradient(45deg,#ff6600,#ff9900,#ff3300);
+  border:none; border-radius:12px; color:white;
   font-weight:bold; text-transform:uppercase;
-  cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
+  cursor:pointer; box-shadow:0 0 20px #ff6600,0 0 40px #ff6600,0 0 60px #ff3300;
   z-index:1000;
 }
 #startBtn { margin-top:30vh; }
@@ -43,8 +46,8 @@ html, body {
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%);
-  font-size:80px; color:#d166ff;
-  text-shadow:0 0 20px #d166ff,0 0 40px #a044ff;
+  font-size:80px; color:#ff6600;
+  text-shadow:0 0 20px #ff6600,0 0 40px #ff9900;
   z-index:1001; display:none;
 }
 #scoreContainer {
@@ -53,7 +56,7 @@ html, body {
   z-index:1001; text-align:center; display:none;
 }
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
-#score { font-size:28px; color:#d166ff; }
+#score { font-size:28px; color:#ff6600; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
 
 /* --- Bubbles --- */
@@ -61,23 +64,23 @@ html, body {
   width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
   font-size:24px; font-weight:bold; color:#fff;
-  background:linear-gradient(135deg,#a044ff,#6a00f4);
-  border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset;
+  background:linear-gradient(135deg,#ff6600,#ff9900);
+  border:2px solid #ff6600; box-shadow:0 0 15px #ff6600,0 0 30px #ff9900 inset;
   position:absolute; cursor:pointer;
 }
-.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:28px; }
-.bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:28px; }
-.bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:24px; }
-.bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; }
-.bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; filter: invert(1); font-size:26px; }
-.bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0, 0 0 60px #f00; }
+.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; box-shadow:0 0 20px #ff0,0 0 40px #ff0 inset;}
+.bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; box-shadow:0 0 20px #0f0,0 0 40px #0f0 inset;}
+.bubble.triple { background: linear-gradient(135deg,#ff00ff,#9900ff); color:#fff; font-size:24px; box-shadow:0 0 20px #f0f,0 0 40px #f0f inset;}
+.bubble.gravity { background: linear-gradient(135deg,#ff6600,#ffff00); color:#000; font-size:28px; box-shadow:0 0 25px #ff6600,0 0 50px #ffff00 inset; }
+.bubble.invert { background: linear-gradient(135deg,#000,#fff); color:#ff6600; font-size:26px; box-shadow:0 0 25px #fff,0 0 50px #000 inset; }
+.bubble.instawin { background: linear-gradient(135deg,#ff0000,#990000); color:#fff; font-size:26px; box-shadow:0 0 30px #f00,0 0 60px #900 inset; }
 
 /* --- Index Panel --- */
 #indexPanel {
   position:fixed; top:100%; left:0; width:100%;
   max-height:70%; background:rgba(10,10,10,0.95);
   overflow-y:auto; transition:top 0.5s ease; padding:20px;
-  z-index:999; box-shadow:0 -5px 30px #d166ff;
+  z-index:999; box-shadow:0 -5px 30px #ff6600;
 }
 #indexPanel h2 { text-transform:uppercase; }
 #indexPanel .closeBtn {
@@ -88,8 +91,8 @@ html, body {
 .indexItem .bubbleImg {
   width:60px; height:60px; margin-right:15px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
-  font-weight:bold; color:#fff; border:2px solid #d166ff;
-  box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate;
+  font-weight:bold; color:#fff; border:2px solid #ff6600;
+  box-shadow:0 0 15px #ff6600 inset; animation:float 1s infinite alternate;
 }
 .indexItem .desc { flex:1; }
 .indexItem .rarity { font-weight:bold; }
@@ -100,14 +103,14 @@ html, body {
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); display:none; flex-direction:column;
-  justify-content:center; align-items:center; color:#fff; font-size:40px;
+  justify-content:center; align-items:center; color:#ff6600; font-size:40px;
   z-index:1500; text-align:center;
 }
 #continueBtn {
   margin-top:30px; font-size:26px; padding:15px 40px;
-  border:none; border-radius:10px; cursor:pointer; color:#fff;
-  background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
-  box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
+  border:none; border-radius:10px; cursor:pointer; color:white;
+  background: linear-gradient(45deg,#ff6600,#ff9900,#ff3300);
+  box-shadow:0 0 20px #ff6600,0 0 40px #ff6600;
 }
 
 /* --- Version --- */
@@ -143,7 +146,7 @@ html, body {
 
 <div id="loadingScreen">Level 12 studio</div>
 
-<div id="versionLabel">Released 1.1.0</div>
+<div id="versionLabel">Released 1.2.3</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
 
@@ -151,12 +154,12 @@ html, body {
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
   <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Běžná:</span> +1 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#000); filter:invert(1); color:#0ff;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Obrátí barvy obrazovky a dá +10 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; box-shadow:0 0 30px #ff0,0 0 60px #f00;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,1%:</span> Okamžité vítězství (+999 999 999 skóre)</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#ff9900); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ff00,#00aa00); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff6600,#ffff00); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#000,#fff); color:#ff6600;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Obrátí barvy na 1,5 s a dá +10 bodů</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#990000); color:#fff;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,1%:</span> Insta win +999999999 skóre</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -195,17 +198,15 @@ const loadingScreen=document.getElementById('loadingScreen');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
 
-// --- LOADING SCREEN ---
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     loadingScreen.style.display='none';
     startBtn.style.display='block';
     indexBtn.style.display='block';
     attachButtonEvents();
-  },2000);
+  },3550);
 });
 
-// --- BUTTON LOGIC ---
 function attachButtonEvents(){
   startBtn.addEventListener('click',startCountdown);
   indexBtn.addEventListener('click',(e)=>{
@@ -242,7 +243,6 @@ function attachButtonEvents(){
   });
 }
 
-// --- Countdown ---
 function startCountdown(){
   versionLabel.style.display='none';
   startBtn.style.display='none';
@@ -262,7 +262,6 @@ function startCountdown(){
   },1000);
 }
 
-// --- GAME LOGIC ---
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
@@ -278,45 +277,17 @@ function spawnBubble(){
   const bubble=document.createElement('div');
   bubble.classList.add('bubble');
 
-  // --- NOVÉ ŠANCE ---
-  if(chance<=0.001){ // 0.1 %
-    bubble.classList.add('instawin');
-    bubble.textContent="?12?";
-    bubble.dataset.type="instawin";
-  }
-  else if(chance<=0.016){ // 1.5 %
-    bubble.classList.add('invert');
-    bubble.textContent="!12!";
-    bubble.dataset.type="invert";
-  }
-  else if(chance<=0.0185){ // 0.25 %
-    bubble.classList.add('rare2x');
-    bubble.textContent="12×2";
-    bubble.dataset.type="2x";
-  }
-  else if(chance<=0.0285){ // 1 %
-    bubble.classList.add('rare144');
-    bubble.textContent="12²";
-    bubble.dataset.type="144";
-  }
-  else if(chance<=0.0485){ // 2 %
-    bubble.classList.add('triple');
-    bubble.textContent="3×12";
-    bubble.dataset.type="triple";
-  }
-  else if(chance<=0.0785){ // 3 %
-    bubble.classList.add('gravity');
-    bubble.textContent="<12>";
-    bubble.dataset.type="gravity";
-  }
-  else {
-    bubble.textContent="12";
-    bubble.dataset.type="normal";
-  }
+  if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
+  else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
+  else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
+  else if(chance<=0.0775){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; } // 1,5%
+  else if(chance<=0.0785){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; } // 0,1%
+  else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
 
   const size=Math.random()*60+60;
-  bubble.style.width=size+'px';
-  bubble.style.height=size+'px';
+  bubble.style.width=`${size}px`;
+  bubble.style.height=`${size}px`;
   bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
@@ -325,7 +296,6 @@ function spawnBubble(){
 
   const pop=()=>{
     if(!gameRunning) return;
-    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
     bubble.remove();
     bubbles=bubbles.filter(b=>b!==bubble);
 
@@ -341,18 +311,23 @@ function spawnBubble(){
       });
     }
     else if(bubble.dataset.type==="invert"){
-      document.body.style.filter='invert(1)';
-      setTimeout(()=>document.body.style.filter='',1500);
+      document.body.style.filter="invert(1)";
       score+=10;
+      setTimeout(()=>{ document.body.style.filter="invert(0)"; },1500);
     }
     else if(bubble.dataset.type==="instawin"){
       score+=999999999;
+      endGame();
+      return;
     }
     else score++;
 
-    if(score>999999999) score=999999999;
+    popSound.currentTime=0; popSound.play();
     scoreEl.textContent="Skóre: "+score;
-    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
+    if(score>highscore){
+        highscore=score;
+        highscoreEl.textContent="Nejvyšší skóre: "+highscore;
+    }
   };
 
   bubble.addEventListener('click',pop);
@@ -368,17 +343,20 @@ function spawnSingleBubble(){
   const bubble=document.createElement('div'); bubble.classList.add('bubble');
   bubble.textContent="12"; bubble.dataset.type="normal";
   const size=Math.random()*60+60;
-  bubble.style.width=size+'px'; bubble.style.height=size+'px';
+  bubble.style.width=`${size}px`;
+  bubble.style.height=`${size}px`;
   bubble.style.fontSize=size/3+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
   bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
   document.body.appendChild(bubble);
 
-  const pop=()=>{  
-    if(!gameRunning) return; score++;  
-    if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score;  
-    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }  
+  const pop=()=>{ 
+    if(!gameRunning) return; 
+    score++; 
+    if(score>999999999) score=999999999; 
+    scoreEl.textContent="Skóre: "+score; 
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; } 
     bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
   };
   bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
@@ -390,9 +368,9 @@ function updateBubbles(){
   bubbles.forEach(bubble=>{
     const top=parseFloat(bubble.style.top);
     bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
-    if(top<=0){  
-      lives--; livesEl.textContent="Životy: "+lives;  
-      bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);  
+    if(top<=0){ 
+      lives--; livesEl.textContent="Životy: "+lives; 
+      bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); 
       if(lives<=0) endGame();
     }
   });
