--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@ html, body {
                     radial-gradient(circle at 70% 70%, #ff99001a 10%, transparent 60%),
                     linear-gradient(180deg, #000 0%, #111 100%);
   color:#ff6600;
+  position:relative;
+}
+
+/* --- EMOJI BACKGROUND --- */
+body::before {
+  content: "👻🎃👻🎃👻🎃👻🎃";
+  position:absolute;
+  top:0; left:0;
+  width:100%; height:100%;
+  font-size:80px;
+  color: rgba(255,255,255,0.05);
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  pointer-events: none;
+  z-index:0;
 }
 
 /* --- LOADING SCREEN --- */
@@ -67,6 +84,7 @@ html, body {
   background:linear-gradient(135deg,#ff6600,#ff9900);
   border:2px solid #ff6600; box-shadow:0 0 15px #ff6600,0 0 30px #ff9900 inset;
   position:absolute; cursor:pointer;
+  z-index:1002;
 }
 .bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; box-shadow:0 0 20px #ff0,0 0 40px #ff0 inset;}
 .bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; box-shadow:0 0 20px #0f0,0 0 40px #0f0 inset;}
@@ -158,8 +176,8 @@ html, body {
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ff00,#00aa00); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff6600,#ffff00); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#000,#fff); color:#ff6600;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Obrátí barvy na 1,5 s a dá +10 bodů</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#990000); color:#fff;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,1%:</span> Insta win +999999999 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#000,#fff); color:#ff6600;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> +10 skóre a obrácené barvy</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#990000); color:#fff;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,1%:</span> Instawin +999999999 skóre</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -198,6 +216,7 @@ const loadingScreen=document.getElementById('loadingScreen');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
 
+// --- LOADING SCREEN ---
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     loadingScreen.style.display='none';
@@ -207,6 +226,7 @@ window.addEventListener('load',()=>{
   },3550);
 });
 
+// --- BUTTON LOGIC ---
 function attachButtonEvents(){
   startBtn.addEventListener('click',startCountdown);
   indexBtn.addEventListener('click',(e)=>{
@@ -243,6 +263,7 @@ function attachButtonEvents(){
   });
 }
 
+// --- Countdown ---
 function startCountdown(){
   versionLabel.style.display='none';
   startBtn.style.display='none';
@@ -262,6 +283,7 @@ function startCountdown(){
   },1000);
 }
 
+// --- GAME LOGIC ---
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
@@ -269,6 +291,7 @@ function startGame(){
   requestAnimationFrame(updateBubbles);
 }
 
+// --- Bubble spawning ---
 function spawnBubble(){
   if(!gameRunning) return;
   const elapsed=(Date.now()-startTime)/1000;
@@ -281,8 +304,8 @@ function spawnBubble(){
   else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
   else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
   else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
-  else if(chance<=0.0775){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; } // 1,5%
-  else if(chance<=0.0785){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; } // 0,1%
+  else if(chance<=0.0775){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
+  else if(chance<=0.0785){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
   else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
 
   const size=Math.random()*60+60;
@@ -296,6 +319,7 @@ function spawnBubble(){
 
   const pop=()=>{
     if(!gameRunning) return;
+    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
     bubble.remove();
     bubbles=bubbles.filter(b=>b!==bubble);
 
@@ -310,24 +334,13 @@ function spawnBubble(){
         b.style.top=(by-parseFloat(b.style.height)/2)+'px';
       });
     }
-    else if(bubble.dataset.type==="invert"){
-      document.body.style.filter="invert(1)";
-      score+=10;
-      setTimeout(()=>{ document.body.style.filter="invert(0)"; },1500);
-    }
-    else if(bubble.dataset.type==="instawin"){
-      score+=999999999;
-      endGame();
-      return;
-    }
+    else if(bubble.dataset.type==="invert") score+=10;
+    else if(bubble.dataset.type==="instawin") score=999999999;
     else score++;
 
-    popSound.currentTime=0; popSound.play();
+    if(score>999999999) score=999999999;
     scoreEl.textContent="Skóre: "+score;
-    if(score>highscore){
-        highscore=score;
-        highscoreEl.textContent="Nejvyšší skóre: "+highscore;
-    }
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
   };
 
   bubble.addEventListener('click',pop);
@@ -343,8 +356,7 @@ function spawnSingleBubble(){
   const bubble=document.createElement('div'); bubble.classList.add('bubble');
   bubble.textContent="12"; bubble.dataset.type="normal";
   const size=Math.random()*60+60;
-  bubble.style.width=`${size}px`;
-  bubble.style.height=`${size}px`;
+  bubble.style.width=`${size}px`; bubble.style.height=`${size}px`;
   bubble.style.fontSize=size/3+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
@@ -352,10 +364,8 @@ function spawnSingleBubble(){
   document.body.appendChild(bubble);
 
   const pop=()=>{ 
-    if(!gameRunning) return; 
-    score++; 
-    if(score>999999999) score=999999999; 
-    scoreEl.textContent="Skóre: "+score; 
+    if(!gameRunning) return; score++; 
+    if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score; 
     if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; } 
     bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
   };
@@ -377,6 +387,7 @@ function updateBubbles(){
   requestAnimationFrame(updateBubbles);
 }
 
+// --- END GAME ---
 function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
   scoreContainer.style.display='none';
