--- a/index.html
+++ b/index.html
@@ -10,32 +10,23 @@ html, body {
   font-family: monospace;
   background-color:#0a0a0a;
   color:#ff6600;
-  position:relative;
 }
 
-/* --- EMOJI PO CELÉM POZADÍ --- */
+/* --- EMOJI BACKGROUND --- */
 #emojiBackground {
   position:absolute; top:0; left:0; width:100%; height:100%;
   display:grid;
-  grid-template-columns: repeat(auto-fill, 100px);
-  grid-template-rows: repeat(auto-fill, 100px);
+  grid-template-columns: repeat(auto-fit, 100px);
+  grid-template-rows: repeat(auto-fit, 100px);
   z-index:0;
   pointer-events:none;
 }
 #emojiBackground div {
-  font-size:50px;
-  color: rgba(255,255,255,0.05);
+  font-size:40px;
+  opacity:0.15;
   display:flex;
   justify-content:center;
   align-items:center;
-  animation:floatEmoji linear infinite;
-}
-
-/* Pohyb emoji */
-@keyframes floatEmoji {
-  0% { transform: translateY(0) rotate(0deg);}
-  50% { transform: translateY(-10px) rotate(10deg);}
-  100% { transform: translateY(0) rotate(0deg);}
 }
 
 /* --- LOADING SCREEN --- */
@@ -89,15 +80,14 @@ html, body {
   font-size:24px; font-weight:bold; color:#fff;
   background:linear-gradient(135deg,#ff6600,#ff9900);
   border:2px solid #ff6600; box-shadow:0 0 15px #ff6600,0 0 30px #ff9900 inset;
-  position:absolute; cursor:pointer;
-  z-index:1002;
+  position:absolute; cursor:pointer; z-index:100;
 }
 .bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; box-shadow:0 0 20px #ff0,0 0 40px #ff0 inset;}
 .bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; box-shadow:0 0 20px #0f0,0 0 40px #0f0 inset;}
 .bubble.triple { background: linear-gradient(135deg,#ff00ff,#9900ff); color:#fff; font-size:24px; box-shadow:0 0 20px #f0f,0 0 40px #f0f inset;}
-.bubble.gravity { background: linear-gradient(135deg,#ff6600,#ffff00); color:#000; font-size:28px; box-shadow:0 0 25px #ff6600,0 0 50px #ffff00 inset; }
-.bubble.invert { background: linear-gradient(135deg,#000,#fff); color:#ff6600; font-size:26px; box-shadow:0 0 25px #fff,0 0 50px #000 inset; }
-.bubble.instawin { background: linear-gradient(135deg,#ff0000,#990000); color:#fff; font-size:26px; box-shadow:0 0 30px #f00,0 0 60px #900 inset; }
+.bubble.gravity { background: linear-gradient(135deg,#ff6600,#ffff00); color:#000; font-size:28px; box-shadow:0 0 25px #ff6600,0 0 50px #ffff00 inset;}
+.bubble.invert { background:#000; color:#ff6600; font-size:28px; border:2px solid #ff6600;}
+.bubble.instawin { background: #ff00ff; color:#fff; font-size:28px; border:2px solid #ff00ff;}
 
 /* --- Index Panel --- */
 #indexPanel {
@@ -183,8 +173,8 @@ html, body {
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ff00,#00aa00); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff6600,#ffff00); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#000,#fff); color:#ff6600;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Invertuje barvy a dává +10 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#990000); color:#fff;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,05%:</span> Insta-win +999999999 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background:#000; color:#ff6600;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> +10 skóre a invertuje barvy</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background:#ff00ff; color:#fff;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,05%:</span> Insta win +999999999 skóre</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -220,6 +210,7 @@ const versionLabel=document.getElementById('versionLabel');
 const easterEl=document.getElementById('easterEgg');
 const closeBtn=document.querySelector('#indexPanel .closeBtn');
 const loadingScreen=document.getElementById('loadingScreen');
+const emojiBg=document.getElementById('emojiBackground');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
 
@@ -309,11 +300,11 @@ function spawnBubble(){
   bubble.classList.add('bubble');
 
   if(chance<=0.0005){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
-  else if(chance<=0.015){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
-  else if(chance<=0.0025+0.015){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
-  else if(chance<=0.0125+0.015){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
-  else if(chance<=0.0325+0.015){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
-  else if(chance<=0.0625+0.015){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
+  else if(chance<=0.015){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  else if(chance<=0.025){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
+  else if(chance<=0.045){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
+  else if(chance<=0.075){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
+  else if(chance<=0.09){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
   else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
 
   const size=Math.random()*60+60;
@@ -331,20 +322,21 @@ function spawnBubble(){
     bubble.remove();
     bubbles=bubbles.filter(b=>b!==bubble);
 
-    if(bubble.dataset.type==="2x") score*=2;
-    else if(bubble.dataset.type==="144") score+=144;
-    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
-    else if(bubble.dataset.type==="gravity"){
-      const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
-      const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
-      bubbles.forEach(b=>{
-        b.style.left=(bx-parseFloat(b.style.width)/2)+'px';
-        b.style.top=(by-parseFloat(b.style.height)/2)+'px';
-      });
+    switch(bubble.dataset.type){
+      case "2x": score*=2; break;
+      case "144": score+=144; break;
+      case "triple": for(let i=0;i<3;i++) spawnSingleBubble(); break;
+      case "gravity":
+        const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
+        const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
+        bubbles.forEach(b=>{
+          b.style.left=(bx-parseFloat(b.style.width)/2)+'px';
+          b.style.top=(by-parseFloat(b.style.height)/2)+'px';
+        }); break;
+      case "invert": document.body.style.filter = document.body.style.filter==="invert(1)"?"invert(0)":"invert(1)"; score+=10; break;
+      case "instawin": score=999999999; endGame(); break;
+      default: score++; break;
     }
-    else if(bubble.dataset.type==="invert"){ score+=10; document.body.style.filter=(document.body.style.filter==="invert(1)"?"invert(0)":"invert(1)"); }
-    else if(bubble.dataset.type==="instawin"){ score=999999999; }
-    else score++;
 
     if(score>999999999) score=999999999;
     scoreEl.textContent="Skóre: "+score;
@@ -364,8 +356,7 @@ function spawnSingleBubble(){
   const bubble=document.createElement('div'); bubble.classList.add('bubble');
   bubble.textContent="12"; bubble.dataset.type="normal";
   const size=Math.random()*60+60;
-  bubble.style.width=`${size}px`;
-  bubble.style.height=`${size}px`;
+  bubble.style.width=`${size}px`; bubble.style.height=`${size}px`;
   bubble.style.fontSize=size/3+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
@@ -415,19 +406,21 @@ function showEndScreen(){
   endScreen.style.display='flex';
 }
 
-// --- GENEROVÁNÍ POZADÍ EMOJI ---
+// --- EMOJI BACKGROUND GENERATION ---
 function generateEmojiBackground(){
-  const emojiBg=document.getElementById('emojiBackground');
   const emojis=["👻","🎃"];
   const cols=Math.ceil(window.innerWidth/100);
   const rows=Math.ceil(window.innerHeight/100);
-  for(let i=0;i<cols*rows;i++){
-    const div=document.createElement('div');
-    div.textContent=emojis[Math.floor(Math.random()*emojis.length)];
-    div.style.animationDuration=(Math.random()*5+5)+'s';
-    emojiBg.appendChild(div);
+  emojiBg.innerHTML="";
+  for(let r=0;r<rows;r++){
+    for(let c=0;c<cols;c++){
+      const div=document.createElement("div");
+      div.textContent=emojis[Math.floor(Math.random()*emojis.length)];
+      emojiBg.appendChild(div);
+    }
   }
 }
+window.addEventListener('resize', generateEmojiBackground);
 </script>
 </body>
 </html>
