--- a/index.html
+++ b/index.html
@@ -10,23 +10,20 @@ html, body {
   font-family: monospace;
   background-color:#0a0a0a;
   color:#ff6600;
+  position: relative;
 }
 
-/* --- EMOJI BACKGROUND (šachovnice) --- */
+/* --- Emoji pozadí šachovnice --- */
 #emojiBackground {
-  position:absolute; top:0; left:0; width:100%; height:100%;
-  display:grid;
-  grid-template-columns: repeat(auto-fill, 100px);
-  grid-auto-rows: 100px;
+  position: fixed;
+  top:0; left:0; width:100%; height:100%;
+  font-size:50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 50px);
+  grid-auto-rows: 50px;
+  opacity:0.1;
   z-index:0;
   pointer-events:none;
-}
-#emojiBackground div {
-  font-size:40px;
-  opacity:0.15;
-  display:flex;
-  justify-content:center;
-  align-items:center;
 }
 
 /* --- LOADING SCREEN --- */
@@ -80,14 +77,14 @@ html, body {
   font-size:24px; font-weight:bold; color:#fff;
   background:linear-gradient(135deg,#ff6600,#ff9900);
   border:2px solid #ff6600; box-shadow:0 0 15px #ff6600,0 0 30px #ff9900 inset;
-  position:absolute; cursor:pointer; z-index:100;
+  position:absolute; cursor:pointer;
 }
 .bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; box-shadow:0 0 20px #ff0,0 0 40px #ff0 inset;}
 .bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; box-shadow:0 0 20px #0f0,0 0 40px #0f0 inset;}
 .bubble.triple { background: linear-gradient(135deg,#ff00ff,#9900ff); color:#fff; font-size:24px; box-shadow:0 0 20px #f0f,0 0 40px #f0f inset;}
 .bubble.gravity { background: linear-gradient(135deg,#ff6600,#ffff00); color:#000; font-size:28px; box-shadow:0 0 25px #ff6600,0 0 50px #ffff00 inset;}
-.bubble.invert { background:#000; color:#ff6600; font-size:28px; border:2px solid #ff6600;}
-.bubble.instawin { background: #ff00ff; color:#fff; font-size:28px; border:2px solid #ff00ff;}
+.bubble.invert { background: linear-gradient(135deg,#000,#fff); color:#000; font-size:24px; box-shadow:0 0 20px #fff inset;}
+.bubble.instawin { background: linear-gradient(135deg,#ff0000,#990000); color:#fff; font-size:24px; box-shadow:0 0 20px #f00 inset;}
 
 /* --- Index Panel --- */
 #indexPanel {
@@ -173,8 +170,8 @@ html, body {
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ff00,#00aa00); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff6600,#ffff00); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background:#000; color:#ff6600;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Obrátí barvy a +10 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background:#ff00ff; color:#fff;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,1%:</span> Insta win +999999999 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#000,#fff); color:#000;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Obrátí barvy na 5s +10 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#990000); color:#fff;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,1%:</span> Okamžitá výhra +999999999 skóre</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -210,20 +207,19 @@ const versionLabel=document.getElementById('versionLabel');
 const easterEl=document.getElementById('easterEgg');
 const closeBtn=document.querySelector('#indexPanel .closeBtn');
 const loadingScreen=document.getElementById('loadingScreen');
+const emojiBg=document.getElementById('emojiBackground');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
 
-// --- EMOJI BACKGROUND ---
-const emojiBg=document.getElementById('emojiBackground');
+// --- Emoji pozadí ---
 function generateEmojiBackground(){
-  const emojis=["👻","🎃"];
-  const cols=Math.ceil(window.innerWidth/100);
-  const rows=Math.ceil(window.innerHeight/100);
-  emojiBg.innerHTML="";
+  const cols=Math.ceil(window.innerWidth/50);
+  const rows=Math.ceil(window.innerHeight/50);
+  emojiBg.innerHTML='';
   for(let r=0;r<rows;r++){
     for(let c=0;c<cols;c++){
-      const div=document.createElement("div");
-      div.textContent = emojis[(r+c)%2];
+      const div=document.createElement('div');
+      div.textContent=((r+c)%2===0?'🎃':'👻');
       emojiBg.appendChild(div);
     }
   }
@@ -350,8 +346,9 @@ function spawnBubble(){
       });
     }
     else if(bubble.dataset.type==="invert"){
-      document.body.style.filter="invert(1)";
-      score+=10;
+      score += 10;
+      document.body.style.filter = "invert(1)";
+      setTimeout(()=>{document.body.style.filter = "invert(0)";},5000);
     }
     else if(bubble.dataset.type==="instawin"){
       score=999999999;
